--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,24 @@
-APScheduler==3.6.3
-backports.zoneinfo==0.2.1
-beautifulsoup4==4.9.3
-cachetools==4.2.2
-certifi==2020.12.5
-chardet==4.0.0
+absl-py==1.0.0
+attrs==21.4.0
+black==22.3.0
+click==8.1.0
 colorama==0.4.4
-dbf-light==1.0.0
-EasyProcess==0.3
-future==0.18.2
-idna==2.10
-ifaddr==0.1.7
-loguru==0.5.3
-numpy==1.19.5
-opencv-python==4.5.1.48
-psutil==5.8.0
-pyalsaaudio==0.9.0
-pycbrf==1.1.0
-python-dotenv==0.15.0
-python-telegram-bot==13.7
-pytz==2021.1
-requests==2.25.1
+cvzone==1.5.6
+cycler==0.11.0
+fonttools==4.31.2
+kiwisolver==1.4.2
+matplotlib==3.5.1
+mediapipe==0.8.9.1
+mypy-extensions==0.4.3
+numpy==1.22.3
+opencv-contrib-python==4.5.5.64
+opencv-python==4.5.5.64
+packaging==21.3
+pathspec==0.9.0
+Pillow==9.0.1
+platformdirs==2.5.1
+protobuf==3.19.4
+pyparsing==3.0.7
+python-dateutil==2.8.2
 six==1.16.0
-soupsieve==2.2
-tornado==6.1
-tzdata==2021.1
-tzlocal==3.0
-urllib3==1.26.2
-win32-setctime==1.0.3
-yeelight==0.5.4
+tomli==2.0.1
