--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -1,58 +1,44 @@
 name: Service workflow
 
 on:
+  workflow_dispatch:
   push:
     branches: 
-      - '*'         # matches every branch that doesn't contain a '/'
-      - '*/*'       # matches every branch containing a single '/'
-      - '**'        # matches every branch
-      # - "!dev"
-      # - "!main"
+      - 'main'
+      # - '*'         # matches every branch that doesn't contain a '/'
+      # - '*/*'       # matches every branch containing a single '/'
+      # - '**'        # matches every branch
       
-
 env:
-
-  CLOUD_TESTING: True
+  LOCAL: True
 
 jobs:
   
-  lint-format-type-test:
+  local-deploy:
     runs-on: self-hosted
     steps:
-      - name: Check out
-        uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11' 
-          cache: 'pipenv'
-      - name: Install dependencies
+      - name: Clone repo or pull changes
         shell: bash
         run: |
-          pipenv install
-      - name: Update log file for rerun service
+          REPO_DIR="/home/denis/$(basename ${{ github.repository }})"
+
+          # Check if the repository directory exists
+          if [ ! -d "$REPO_DIR" ]; then
+            echo "Repository not found. Cloning..."
+            cd /home/denis
+            git clone https://${{ github.actor }}:${{ github.token }}@github.com/${{ github.repository }}.git
+            cd $(basename ${{ github.repository }})
+          else
+            echo "Repository found. Pulling latest changes..."
+            cd $REPO_DIR
+            git pull --rebase
+          fi
+      - name: Checkout
         shell: bash
         run: |
-          echo "1" >> version.log
-      # - name: Linters, Formatter and Typing check
-      #   shell: bash
-      #   run: |
-      #     cd $(basename ${{ github.repository }})
-      #     # stop the build if there are Python syntax errors or undefined names
-      #     pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-      #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-      #     pipenv run flake8 . --exit-zero --count --statistics
-      #     pipenv run black . --check --verbose
-      #     pipenv run isort --profile black . -c
-      #     pipenv run mypy .
-      # # - name: Integrational tests
-      # #   shell: bash
-      # #   run: |
-      # #     cd $(basename ${{ github.repository }})
-      # #     pipenv run coverage run -m pytest tests/integration_tests -vvv
-      # #     pipenv run coverage report -m --include 'api/routes/*' --fail-under=70
-      # - name: Unit tests
-      #   shell: bash
-      #   run: |
-      #     cd $(basename ${{ github.repository }})
-      #     pipenv run coverage run -m pytest . -vvv
-      #     pipenv run coverage report -m --omit 'tests/*'
+          # Checkout the desired branch
+          git checkout ${{ github.ref_name }}
+      - name: Log new version to trigger service
+        shell: bash
+        run: |
+          echo "1" >> /home/denis/version.log
