--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,38 @@
 annotated-types==0.7.0
 anyio==4.6.0
+boto3==1.35.29
+botocore==1.35.29
 certifi==2024.8.30
 charset-normalizer==3.3.2
+cohere==5.10.0
+colorama==0.4.6
 distro==1.9.0
 exceptiongroup==1.2.2
+fastavro==1.9.7
+filelock==3.16.1
+fsspec==2024.9.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.25.1
 idna==3.10
 jiter==0.5.0
-numpy==2.1.1
-openai==1.50.1
-opencv-python==4.10.0.84
+jmespath==1.0.1
+openai==1.50.2
+packaging==24.1
+parameterized==0.9.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-dateutil==2.9.0.post0
 python-telegram-bot==21.6
+PyYAML==6.0.2
 requests==2.32.3
+s3transfer==0.10.2
+six==1.16.0
 sniffio==1.3.1
+tokenizers==0.20.0
 tqdm==4.66.5
+types-requests==2.32.0.20240914
 typing_extensions==4.12.2
 urllib3==2.2.3
